some changes done

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
               <p class="what-i-do">A Full Stack Developer & Designer</p>
             </div>
             <a href="#" class="sue-btn-link">
-              <div class="sue-main-btn fill-btn hire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
+              <div class="sue-main-btn fill-btn hgit push origin main
+git status
+ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
             </a>
           </div>
         </div>
@@ -794,7 +796,9 @@
             <div class="project-info fadein-left">
               <h1>Parsing of <span class="gradient">Social Media</span> Feeds</h1>
               <p>Parsing of Social Media Feeds is a Smart India Hackathon project that automates the extraction of social media data like posts, comments, and interactions. It generates structured evidence reports, tracks GPS data with timestamps, and supports digital investigations for law enforcement agencies.</p>
-              <button><i class='bx bx-link-external'></i> Github</button>
+                <a href="https://github.com/ravitejaniddana/personalportfolio" target="_blank" class="github-btn">
+                  <i class='bx bx-link-external'></i> Github
+                </a>
             </div>
           </div>
 
@@ -806,7 +810,9 @@
               <div class="project-info fadein-left">
                 <h1>Movie <span class="gradient">Palace</span> Website</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam modi voluptates assumenda omnis impedit ipsa veritatis soluta earum minima consequatur.</p>
-                <button><i class='bx bx-link-external'></i> Github</button>
+                  <a href="https://github.com/PrasannaGundumogula/1743-DATABREACH.git" target="_blank" class="github-btn">
+                    <i class='bx bx-link-external'></i> Github
+                  </a>
               </div>
           </div>
 
@@ -818,7 +824,9 @@
               <div class="project-info fadein-left">
                 <h1>Movie <span class="gradient">Landing</span> Page</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores numquam saepe itaque sapiente odit neque necessitatibus explicabo hic laudantium ipsam nesciunt ducimus, cumque ratione esse.</p>
-                <button><i class='bx bx-link-external'></i> Github</button>
+                  <a href="https://github.com/ravitejaniddana/personalportfolio" target="_blank" class="github-btn">
+                    <i class='bx bx-link-external'></i> Github
+                  </a>
               </div>
             </div>
         </div>
