changes done in index.html

--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
           <!-- Project 1 -->
           <div class="project-card">
             <div class="project-vidbox ">
-              <video loop autoplay muted playsinline controls id="projectVideo1" src="/assets/videos/parsing_video.mp4"></video>
+              <video loop autoplay muted playsinline preload="auto" controls id="projectVideo1" src="/assets/videos/parsing_video.mp4"></video>
               <div class="hover-sign"></div>
             </div>
             <div class="project-info fadein-left">
@@ -805,7 +805,7 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
           <!-- Project 2 -->
           <div class="project-card">
             <div class="project-vidbox ">
-              <video loop autoplay muted playsinline controls id="projectVideo2" src="/assets/videos/parsing_video.mp4"></video>
+              <video loop autoplay muted playsinline preload="auto" controls id="projectVideo2" src="/assets/videos/parsing_video.mp4"></video>
             </div>
               <div class="project-info fadein-left">
                 <h1>Movie <span class="gradient">Palace</span> Website</h1>
@@ -819,7 +819,7 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
             <!-- Project 3 -->
           <div class="project-card">
             <div class="project-vidbox">
-              <video loop autoplay muted playsinline controls id="projectVideo3" src="/assets/videos/parsing_video.mp4"></video>
+              <video loop autoplay muted playsinline preload="auto" controls id="projectVideo3" src="/assets/videos/parsing_video.mp4"></video>
             </div>
               <div class="project-info fadein-left">
                 <h1>Movie <span class="gradient">Landing</span> Page</h1>
