modified video tag in index.html file

--- a/index.html
+++ b/index.html
@@ -790,8 +790,11 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
           <!-- Project 1 -->
           <div class="project-card">
             <div class="project-vidbox ">
-              <video loop autoplay muted playsinline preload="auto" controls id="projectVideo1" src="/assets/videos/parsing_video.mp4"></video>
-              <div class="hover-sign"></div>
+              <video autoplay muted playsinline loop preload="auto" width="100%">
+                <source src="assets/videos/parsing_video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
+
             </div>
             <div class="project-info fadein-left">
               <h1>Parsing of <span class="gradient">Social Media</span> Feeds</h1>
@@ -805,8 +808,11 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
           <!-- Project 2 -->
           <div class="project-card">
             <div class="project-vidbox ">
-              <video loop autoplay muted playsinline preload="auto" controls id="projectVideo2" src="/assets/videos/parsing_video.mp4"></video>
-            </div>
+              <video autoplay muted playsinline loop preload="auto" width="100%">
+                <source src="assets/videos/parsing_video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>           
+             </div>
               <div class="project-info fadein-left">
                 <h1>Movie <span class="gradient">Palace</span> Website</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam modi voluptates assumenda omnis impedit ipsa veritatis soluta earum minima consequatur.</p>
@@ -819,8 +825,10 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
             <!-- Project 3 -->
           <div class="project-card">
             <div class="project-vidbox">
-              <video loop autoplay muted playsinline preload="auto" controls id="projectVideo3" src="/assets/videos/parsing_video.mp4"></video>
-            </div>
+              <video autoplay muted playsinline loop preload="auto" width="100%">
+                <source src="assets/videos/parsing_video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>            </div>
               <div class="project-info fadein-left">
                 <h1>Movie <span class="gradient">Landing</span> Page</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores numquam saepe itaque sapiente odit neque necessitatibus explicabo hic laudantium ipsam nesciunt ducimus, cumque ratione esse.</p>
