--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
   
 </head>
 <body>
-<video class="back-vid" autoplay loop muted plays-inline src="videos/galaxy.mp4"></video>
 
 <div class="cursor">
     <div class="cursor-dot"></div>
@@ -83,9 +82,9 @@
           <span>Follow me</span>
           <div class="social-line"></div>
           <ul class="social-icons">
-            <li><a href="#"><i class="ri-facebook-fill"></i></a></li>
-            <li><a href="#"><i class="ri-twitter-x-fill"></i></a></li>
-            <li><a href="#"><i class="ri-linkedin-fill"></i></a></li>
+            <li><a href="https://www.instagram.com/floatingheart_tej_0801?igsh=MTl2czlyNWNqNjVsOQ=="><i class="ri-instagram-fill"></i></a></li>
+            <li><a href="https://x.com/ravitejaniddana?t=P-0pkjUPpZvqw_y9M6Ye6Q&s=09"><i class="ri-twitter-x-fill"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/ravitej-niddana-8932bb261?"><i class="ri-linkedin-fill"></i></a></li>
           </ul>
         </div>
         <div class="avatar-container">
@@ -136,16 +135,16 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
             </div>
             <div class="pro-list">
               <div class="pro-card">
-                <span>07</span>
-                <p>Years Of Experience</p>
+                <span>04</span>
+                <p>Years Of Continuous Learning</p>
               </div>
               <div class="pro-card">
                 <span>09</span>
                 <p>Complete Projects</p>
               </div>
               <div class="pro-card">
-                <span>1K</span>
-                <p>Satisfied Customers</p>
+                <span>100%</span>
+                <p>Effort & Consistency</p>
               </div>
             </div>
             <div class="about-buttons">
@@ -236,7 +235,7 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
                   <i class="ri-sparkling-fill"></i>
                   <div>
                     <h5>Pantech.ai</h5>
-                    <p>Full Stack Develoepr</p>
+                    <p>Full Stack Developer</p>
                     <span>Dec 2024 - Mar 2025</span>
                   </div>
                 </div>
@@ -590,7 +589,7 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
                 </div>
                 <div class="card-info">
                   <span>UI/UX Design</span>
-                  <h4>Submarine</h4>
+                  <h4>Vishnu Food Plaza</h4>
                   <i class="ri-arrow-right-up-line card-btn"></i>
                 </div>
               </div>
@@ -602,12 +601,8 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
                     <div class="modal-img">
                       <img src="assets/images/portfolio images/ui1.png" alt="">
                     </div>
-                    <h4 class="modal-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</h4>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat ipsam quod odio ad, quibusdam consectetur architecto magni tenetur vero at aspernatur possimus fuga nostrum eligendi, earum quisquam dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem inventore earum corporis est quo praesentium beatae laudantium nisi reiciendis eius, voluptate tenetur ullam autem dignissimos, nulla minus repellat, maiores sunt.</p>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat ipsam quod odio ad, quibusdam consectetur architecto magni tenetur vero at aspernatur possimus fuga nostrum eligendi, earum quisquam dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem inventore earum corporis est quo praesentium beatae laudantium nisi reiciendis eius, voluptate tenetur ullam autem dignissimos, nulla minus repellat, maiores sunt.</p>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat ipsam quod odio ad, quibusdam consectetur architecto magni tenetur vero at aspernatur possimus fuga nostrum eligendi, earum quisquam dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem inventore earum corporis est quo praesentium beatae laudantium nisi reiciendis eius, voluptate tenetur ullam autem dignissimos, nulla minus repellat, maiores sunt.</p>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat ipsam quod odio ad, quibusdam consectetur architecto magni tenetur vero at aspernatur possimus fuga nostrum eligendi, earum quisquam dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem inventore earum corporis est quo praesentium beatae laudantium nisi reiciendis eius, voluptate tenetur ullam autem dignissimos, nulla minus repellat, maiores sunt.</p>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat ipsam quod odio ad, quibusdam consectetur architecto magni tenetur vero at aspernatur possimus fuga nostrum eligendi, earum quisquam dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem inventore earum corporis est quo praesentium beatae laudantium nisi reiciendis eius, voluptate tenetur ullam autem dignissimos, nulla minus repellat, maiores sunt.</p>
+                    <h4 class="modal-title">Smart Canteen Ordering UI for Vishnu Food Plaza.</h4>
+                    <p class="description">I designed the UI/UX for Vishnu Food Plaza, a food ordering app for my college canteens. The app allows students to browse menus, view newly added items, and place food orders directly from their mobile devices, reducing wait times and improving the overall canteen experience. The design focuses on simplicity, speed, and ease of navigation, with clear visuals for food categories, item details, and smooth order flow.</p>
                   </div>
                 </div>
               </div>
@@ -781,7 +776,7 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
             <div class="projects_container">
                 <article class="projects_card">
                     <div class="projects_image_wrapper">
-                        <img src="assets/images/portfolio images/portfolio-img-04.jpg" alt="Parsing of social media feeds" class="projects_image">
+                        <img src="assets/images/portfolio images/ridemyway.png" alt="Parsing of social media feeds" class="projects_image">
                         <div class="projects_overlay">
                             <a href="#" target="_blank" class="projects_view_btn">
                                 <i class="ri-eye-line"></i>
@@ -805,7 +800,7 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
 
                 <article class="projects_card">
                     <div class="projects_image_wrapper">
-                        <img src="assets/images/portfolio images/portfolio-img-03.jpg" alt="Movie Palace Website" class="projects_image">
+                        <img src="assets/images/portfolio images/movieswebsite.png" alt="Movie Palace Website" class="projects_image">
                         <div class="projects_overlay">
                             <a href="#" target="_blank" class="projects_view_btn">
                                 <i class="ri-eye-line"></i>
@@ -829,7 +824,7 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
 
                 <article class="projects_card">
                     <div class="projects_image_wrapper">
-                        <img src="assets/images/portfolio images/portfolio-img-02.jpg" alt="E-commerce Platform" class="projects_image">
+                        <img src="assets/images/portfolio images/parsing.png" alt="E-commerce Platform" class="projects_image">
                         <div class="projects_overlay">
                             <a href="#" target="_blank" class="projects_view_btn">
                                 <i class="ri-eye-line"></i>
@@ -838,7 +833,8 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
                     </div>
                     <div class="projects_data">
                         <h3 class="projects_name">E-commerce Platform</h3>
-                        <p class="projects_description">Modern e-commerce solution with shopping cart, payment integration, and admin dashboard built with MERN stack.</p>
+                        <p class="projects_description">This project is a Django-based web app that uses Appium and Selenium to automate Instagram login, capture screenshots, and analyze content using NLP. It helps in extracting and organizing social media data for investigation and reporting purposes.
+</p>
                         <div class="projects_skills">
                             <i class="ri-reactjs-line projects_skill" title="React"></i>
                             <i class="ri-nodejs-line projects_skill" title="Node.js"></i>
