--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@ ire-btn-02">Hire Me <i class="ri-user-follow-line"></i></div>
               <p>Please fill out the form on this section to contact with me. Or call between 9:00 a.m. and 8:00 p.m. ET, Monday through Friday.</p>
               <form action="" method="POST" id="sue-contact-form">
                 <div class="input-group">
-                  <input type="text" name="from_name" placeholder="Name *" required>
+                  <input type="text" name="full_name" placeholder="Name *" required>
                 </div>
                 <div class="input-group">
                   <input type="text" name="email" placeholder="Email *" required>
